fix: added only read-visible colors and fixed the transition effect

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,7 +50,7 @@ body {
 		color: $initial-color;
 		
 		*, & {
-			transition: none;
+			//transition: none;
 		}
 
 		#author {
